--- a/app/src/main/res/layout/activity_driver_home.xml
+++ b/app/src/main/res/layout/activity_driver_home.xml
@@ -9,6 +9,7 @@
     tools:context=".DriverHomeActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DRIVER home activity"
@@ -17,6 +18,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/driverButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="example"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_editor_absoluteX="0dp" />
 
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
