--- a/app/src/main/res/layout/activity_initial.xml
+++ b/app/src/main/res/layout/activity_initial.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/secondary_color"
     tools:context=".InitialActivity">
 
     <ImageView
@@ -39,7 +40,7 @@
             android:layout_gravity="center"
             android:backgroundTint="@color/secondary_color"
             android:text="@string/text_init"
-            android:textSize="24sp"
+            android:textSize="30sp"
             android:textColor="@color/text_color"
             android:textStyle="bold" />
 
