--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,7 +64,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:textAlignment="textEnd"
                 android:textStyle="italic"
-                android:text="Registrar" />
+                android:text="@string/register2" />
 
             <Button
                 android:id="@+id/button5"
@@ -76,7 +76,7 @@
                 android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:text="Ingresar" />
+                android:text="@string/text_init" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
