--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,7 +53,7 @@
 
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/registerButton"
                 android:layout_width="220dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="20dp"
@@ -67,7 +67,6 @@
                 android:text="@string/register2" />
 
             <Button
-                android:id="@+id/button5"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
@@ -93,7 +92,7 @@
             />
 
         <EditText
-            android:id="@+id/editTextTextEmailAddress"
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -103,7 +102,7 @@
             android:layout_marginEnd="20dp"/>
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password"
@@ -114,7 +113,7 @@
             android:layout_marginTop="15dp"/>
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/ingresarButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="50dp"
@@ -126,7 +125,7 @@
             android:text="@string/text_init" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/olvidoText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
