--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -52,7 +52,7 @@
             android:layout_marginTop="20dp">
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/ingresarButton"
                 android:layout_width="220dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
@@ -66,7 +66,6 @@
 
 
             <Button
-                android:id="@+id/button6"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="20dp"
@@ -94,7 +93,7 @@
             />
 
         <EditText
-            android:id="@+id/editTextTextEmailAddress"
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -104,7 +103,7 @@
             android:layout_marginEnd="20dp"/>
 
         <EditText
-            android:id="@+id/editTextText"
+            android:id="@+id/user"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -115,7 +114,7 @@
             android:hint="@string/user"/>
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password"
@@ -126,13 +125,13 @@
             android:layout_marginTop="15dp"/>
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/createAccountButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="50dp"
             android:layout_marginStart="50dp"
             android:textSize="20sp"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="40dp"
             android:layout_gravity="center"
             android:backgroundTint="@color/main_color"
             android:layout_marginBottom="30dp"
