feat: add transitions of recover password activity

--- a/app/src/main/res/layout/activity_recover_password.xml
+++ b/app/src/main/res/layout/activity_recover_password.xml
@@ -71,7 +71,7 @@
             android:layout_marginBottom="30dp"/>
 
         <EditText
-            android:id="@+id/editTextTextEmailAddress"
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -86,7 +86,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -97,7 +97,7 @@
                 android:inputType="text" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/sendCodeButton"
                 android:layout_gravity="bottom"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
@@ -108,7 +108,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/recoverButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="50dp"
