feat: add transitions of new password activity

--- a/app/src/main/res/layout/activity_new_password.xml
+++ b/app/src/main/res/layout/activity_new_password.xml
@@ -47,7 +47,6 @@
         >
 
         <TextView
-            android:id="@+id/textView2"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:text="@string/recover_password"
@@ -60,7 +59,6 @@
             />
 
         <TextView
-            android:id="@+id/textView3"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:text="@string/new_password_text"
@@ -71,7 +69,7 @@
             android:layout_marginBottom="30dp"/>
 
         <EditText
-            android:id="@+id/editTextPassword1"
+            android:id="@+id/password1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -81,7 +79,7 @@
             android:layout_marginEnd="20dp"/>
 
         <EditText
-            android:id="@+id/editTextPassword2"
+            android:id="@+id/password2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
@@ -92,7 +90,7 @@
             android:inputType="textPassword" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/continueButton"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginEnd="50dp"
