Feat(ui): Add passenger profile, active route (passenger/driver), passenger list, and chat screens

--- a/app/src/main/res/layout/activity_driver_home.xml
+++ b/app/src/main/res/layout/activity_driver_home.xml
@@ -6,6 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".DriverHomeActivity">
 
     <TextView
@@ -19,14 +20,24 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/driverButton"
-        android:layout_width="match_parent"
+        android:id="@+id/btnDriver"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="example"
-
+        android:text="Driver"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintEnd_toStartOf="@+id/btnRouteInProgress"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/btnRouteInProgress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:text="Ruta en Progreso"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
