--- a/app/src/main/res/layout/activity_passenger_home.xml
+++ b/app/src/main/res/layout/activity_passenger_home.xml
@@ -8,6 +8,7 @@
     tools:context=".DriverProfileActivity">
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="PASSENGER home activity"
@@ -16,6 +17,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btnRouteInProgressPassenger"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ruta en Progreso"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
