--- a/app/src/main/res/layout/activity_passenger_profile.xml
+++ b/app/src/main/res/layout/activity_passenger_profile.xml
@@ -6,12 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".PassengerProfileActivity">
 
+    <!-- Botón de Regreso -->
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="40dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="?attr/popupMenuBackground"
+        android:contentDescription="Volver atrás"
+        android:src="@android:drawable/btn_dialog"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/profileContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:padding="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnBack"
         app:layout_constraintBottom_toTopOf="@id/bottomNavInclude">
 
         <TextView
@@ -21,7 +34,7 @@
             android:text="Información de usuario"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
