--- a/app/src/main/res/layout/activity_driver_home.xml
+++ b/app/src/main/res/layout/activity_driver_home.xml
@@ -6,38 +6,76 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     tools:context=".DriverHomeActivity">
 
-    <TextView
-        android:id="@+id/textView"
+    <ImageView
+        android:id="@+id/imageViewMap"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/map" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="DRIVER home activity"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="4dp"
+        app:cardBackgroundColor="@android:color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="32dp"
+            app:srcCompat="@drawable/id_bars" />
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewButtons"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp"
+        app:cardBackgroundColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
 
-    <Button
-        android:id="@+id/btnDriver"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Driver"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnRouteInProgress"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="12dp">
 
-    <Button
-        android:id="@+id/btnRouteInProgress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:text="Ruta en Progreso"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+            <!-- Botón Ruta en Progreso -->
+            <Button
+                android:id="@+id/btnRouteInProgress"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:backgroundTint="@color/main_color"
+                android:textColor="@color/component_background"
+                android:text="Ruta en Progreso"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="12dp" />
 
+            <!-- Botón Publicar Ruta -->
+            <Button
+                android:id="@+id/btnPublishRoute"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/main_color"
+                android:textColor="@android:color/white"
+                android:text="Publicar Ruta"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="12dp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
