--- a/app/src/main/res/layout/activity_driver_home.xml
+++ b/app/src/main/res/layout/activity_driver_home.xml
@@ -19,7 +19,8 @@
         android:id="@+id/cardViewIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="32dp"
         app:cardCornerRadius="20dp"
         app:cardElevation="4dp"
         app:cardBackgroundColor="@android:color/white"
@@ -30,8 +31,7 @@
             android:id="@+id/imageView5"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:paddingHorizontal="16dp"
-            android:paddingVertical="32dp"
+            android:padding="8dp"
             app:srcCompat="@drawable/id_bars" />
     </androidx.cardview.widget.CardView>
 
