--- a/app/src/main/res/layout/activity_passenger_home.xml
+++ b/app/src/main/res/layout/activity_passenger_home.xml
@@ -163,8 +163,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
-                      
-                      <TextView
+
+                        <TextView
                             android:id="@+id/textViewDestination2Title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -183,5 +183,17 @@
             </LinearLayout>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+
+    <Button
+        android:id="@+id/buscarConductor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="2dp"
+        android:text="Buscar Conductor"
+        android:layout_gravity="top|end"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="48dp"
+        android:backgroundTint="#0047AB"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
