--- a/app/src/main/res/layout/fragment_driver_home.xml
+++ b/app/src/main/res/layout/fragment_driver_home.xml
@@ -1,15 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.driver.home.DriverHomeFragment"
-    android:background="@color/main_color">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".ui.driver.home.DriverHomeFragment"
+        android:background="@color/main_color">
+
+    <!-- Reemplazar ImageView por MapFragment -->
+    <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    <!-- Botón para centrar en la ubicación del usuario -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/myLocartion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|top"
+            android:layout_margin="16dp"
+            android:contentDescription="Mi ubicación"
+            android:src="@android:drawable/ic_menu_mylocation"
+            app:backgroundTint="@android:color/white"
+            app:tint="@color/text_color" />
 
 </FrameLayout>
